--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -10,6 +10,6 @@
 
   <%= f.label :city %>
   <%= f.text_field :city %>
-
+  <%= f.collection_select(:category_id, Category.all, :id, :title) %>
   <%= f.submit %>
 <% end %>
