--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,6 +2,7 @@
 
 <% @categories.each do |category| %>
 <button type="button" class="btn btn-primary btn-lg btn-block"><%= link_to category.title, category_path(category) %></button>
+<%= button_to("Edit", edit_category_path(category), method: :get) %>
 <%= button_to("Delete", category_path(category), method: :delete) %>
 <br>
 <% end %>
