--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,9 +1,20 @@
 <h3>All Companies</h3>
 
-<% @companies.each do |company| %>
-  <div class=company_<%= company.id %>>
-    <%= link_to company.name, company_path(company) %><br>
-    <%= link_to "Edit", edit_company_path(company) %>
-    <%= link_to "Delete", company_path(company), method: "delete" %>
-  </div>
-<% end %>
+<div class="row">
+  <% @companies.each do |company| %>
+       <div class="col s4 m4">
+         <div class="card blue-grey darken-1">
+           <div class="card-content white-text">
+             <div class=company_<%= company.id %>>
+             <span class="card-title"><%= link_to company.name, company_path(company) %></span>
+
+             </div>
+           <div class="card-action">
+             <%= link_to "Edit", edit_company_path(company) %>
+             <%= link_to "Delete", company_path(company), method: "delete" %>
+           </div>
+          </div>
+         </div>
+       </div>
+       <% end %>
+     </div>
